Upgrade baseline to Java 17